group 'edu.vanderbilt.edgent'

apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
        compile 'org.apache.curator:apache-curator:3.1.0'
	compile 'org.apache.curator:curator-framework:3.1.0'
	compile 'org.apache.curator:curator-client:3.1.0'
	compile 'org.apache.curator:curator-recipes:3.1.0'
    	compile 'org.apache.zookeeper:zookeeper:3.5.0-alpha'
        compile 'org.apache.logging.log4j:log4j-api:2.8.2'
        compile 'org.apache.logging.log4j:log4j-core:2.8.2'
        compile fileTree(dir: './jars/', include: ['jeromq-0.4.4-SNAPSHOT.jar','jeromq-0.4.4-SNAPSHOT-sources.jar'])
}

jar {
    from {
        (configurations.runtime).collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}

task wrapper(type: Wrapper){
  gradleVersion = '3.2'
}
